Adding the register method to the Auth Service

--- a/DatingApp.SPA/ClientApp/src/app/home/home.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/home/home.component.html
@@ -17,7 +17,7 @@
             app-register sends output information to its parent component, in this way:
             (cancelRegister)="cancelRegisterMode($event);"
           -->
-        <app-register [valuesFromHome]="values" (cancelRegister)="cancelRegisterMode($event);"></app-register>
+        <app-register (cancelRegister)="cancelRegisterMode($event);"></app-register>
       </div>
     </div>
   </div>
