--- a/DatingApp.SPA/ClientApp/src/app/nav/nav.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/nav/nav.component.html
@@ -18,11 +18,11 @@
 
   <div *ngIf="loggedIn();" class="dropdown">
     <a class="dropdown-toggle text-light">
-      Welcome User
+      Welcome {{authService.decodedToken.unique_name}}
     </a>
   
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit</a>
+      <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit profile</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
     </div>
