--- a/DatingApp.SPA/ClientApp/src/app/member-list/member-list.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/member-list/member-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-2 col-md-3 col-sm-6">
       <p *ngFor="let user of users">
-        {{user.age}}
+        {{user.knowAs}}
       </p>
     </div>
   </div>
