--- a/DatingApp.SPA/ClientApp/src/app/members/member-card/member-card.component.css
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-card/member-card.component.css
@@ -13,4 +13,20 @@
 
 .card-img-wrapper {
   overflow: hidden;
+  position: relative;
+}
+
+.member-icons {
+  position: absolute;
+  bottom: -30%;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  opacity: 0;
+}
+
+.card-img-wrapper:hover .member-icons {
+  bottom: 0;
+  opacity: 1;
 }
