--- a/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
@@ -33,6 +33,27 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-8"></div>
+    <div class="col-sm-8">
+      <div class="tab-panel">
+        <tabset class="member-tabset">
+          <tab heading="About {{ user?.knowAs }}">
+            <h4>Description</h4>
+            <p>{{ user?.introduction }}</p>
+            <h4>Looking for</h4>
+            <p>{{ user?.lookingFor }}</p>
+          </tab>
+          <tab heading="Interests">
+            <h4>Interests</h4>
+            <p>{{ user?.interests }}</p>
+          </tab>
+          <tab heading="Photos">
+            <p>Photos</p>
+          </tab>
+          <tab heading="Messages">
+              <p>Messages</p>
+            </tab>
+        </tabset>
+      </div>
+    </div>
   </div>
 </div>
