--- a/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
@@ -47,7 +47,7 @@
             <p>{{ user.interests }}</p>
           </tab>
           <tab heading="Photos">
-            <p>Photos</p>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
               <p>Messages</p>
