--- a/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-4">
   <div class="row">
+    <h1>{{ user.knowAs }}'s Profile</h1>
+  </div>
+  <div class="row">
     <div class="col-sm-4">
       <div class="card">
         <img
@@ -47,11 +50,14 @@
             <p>{{ user.interests }}</p>
           </tab>
           <tab heading="Photos">
-            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+            <ngx-gallery
+              [options]="galleryOptions"
+              [images]="galleryImages"
+            ></ngx-gallery>
           </tab>
           <tab heading="Messages">
-              <p>Messages</p>
-            </tab>
+            <p>Messages</p>
+          </tab>
         </tabset>
       </div>
     </div>
