--- a/DatingApp.SPA/ClientApp/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-edit/member-edit.component.html
@@ -1,1 +1,95 @@
-<p>{{user.knowAs}}</p>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-sm-4">
+      <h1>Your Profile</h1>
+    </div>
+    <div class="col-sm-8">
+      <div class="alert alert-info">
+        <p>
+          <strong>Information:</strong>
+          You have made changes, Any unsaved changes will be lost!
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="card">
+        <img
+          src="{{ user.photoUrl }}"
+          alt="{{ user.knowAs }}"
+          class="card-img-top img-thumbnail"
+        />
+        <div class="card-body">
+          <div>
+            <strong>Location:</strong>
+            <p>{{ user.city }}, {{ user.country }}</p>
+          </div>
+          <div>
+            <strong>Age:</strong>
+            <p>{{ user.age }}</p>
+          </div>
+          <div>
+            <strong>Last active:</strong>
+            <p>{{ user.lastActive }}</p>
+          </div>
+          <div>
+            <strong>Member since:</strong>
+            <p>{{ user.created }}</p>
+          </div>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-success btn-block">Save changes</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-8">
+      <div class="tab-panel">
+        <tabset class="member-tabset">
+          <tab heading="Edit profile">
+            <form action="">
+              <h4>Description</h4>
+              <textarea
+                name="introduction"
+                rows="6"
+                [(ngModel)]="user.introduction"
+              ></textarea>
+              <h4>Looking for</h4>
+              <textarea
+                name="lookingFor"
+                rows="6"
+                [(ngModel)]="user.lookingFor"
+              ></textarea>
+              <h4>Interests</h4>
+              <textarea
+                name="interests"
+                rows="6"
+                [(ngModel)]="user.interests"
+              ></textarea>
+              <h4>Location details:</h4>
+              <div class="form-inline">
+                <label for="city">City</label>
+                <input
+                  name="city"
+                  class="form-control"
+                  type="text"
+                  [(ngModel)]="user.city"
+                />
+                <label for="country">Country</label>
+                <input
+                  name="country"
+                  class="form-control"
+                  type="text"
+                  [(ngModel)]="user.country"
+                />
+              </div>
+            </form>
+          </tab>
+          <tab heading="Edit photos">
+            <p>Photo edit here</p>
+          </tab>
+        </tabset>
+      </div>
+    </div>
+  </div>
+</div>
