--- a/DatingApp.SPA/ClientApp/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-edit/member-edit.component.html
@@ -4,11 +4,9 @@
       <h1>Your Profile</h1>
     </div>
     <div class="col-sm-8">
-      <div class="alert alert-info">
-        <p>
-          <strong>Information:</strong>
-          You have made changes, Any unsaved changes will be lost!
-        </p>
+      <div class="alert alert-info" *ngIf="editForm.dirty">
+        <strong>Information:</strong>
+        You have made changes, Any unsaved changes will be lost!
       </div>
     </div>
   </div>
@@ -39,7 +37,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <button class="btn btn-success btn-block">Save changes</button>
+          <button class="btn btn-success btn-block" [disabled]="!editForm.dirty" form="editForm">Save changes</button>
         </div>
       </div>
     </div>
@@ -47,21 +45,21 @@
       <div class="tab-panel">
         <tabset class="member-tabset">
           <tab heading="Edit profile">
-            <form action="">
+            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
               <h4>Description</h4>
-              <textarea
+              <textarea class="form-control" 
                 name="introduction"
                 rows="6"
                 [(ngModel)]="user.introduction"
               ></textarea>
               <h4>Looking for</h4>
-              <textarea
+              <textarea class="form-control"
                 name="lookingFor"
                 rows="6"
                 [(ngModel)]="user.lookingFor"
               ></textarea>
               <h4>Interests</h4>
-              <textarea
+              <textarea class="form-control"
                 name="interests"
                 rows="6"
                 [(ngModel)]="user.interests"
