--- a/DatingApp.SPA/ClientApp/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-edit/member-edit.component.html
@@ -14,7 +14,7 @@
     <div class="col-sm-4">
       <div class="card">
         <img
-          src="{{ user.photoUrl }}"
+          src="{{ photoUrl }}"
           alt="{{ user.knowAs }}"
           class="card-img-top img-thumbnail"
         />
@@ -84,7 +84,11 @@
             </form>
           </tab>
           <tab heading="Edit photos">
-            <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
+            <!-- 
+              behaviorsubject replaced output
+              <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor> 
+            -->
+            <app-photo-editor [photos]="user.photos"></app-photo-editor>
           </tab>
         </tabset>
       </div>
