--- a/DatingApp.SPA/ClientApp/src/styles.css
+++ b/DatingApp.SPA/ClientApp/src/styles.css
@@ -4,6 +4,7 @@
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 
 /* Snippet for styles.css to style the tabs component
 The only way we can control styling in the tabbed panel is by using a custom css class and using a global style.   
