--- a/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/members/member-detail/member-detail.component.html
@@ -56,7 +56,7 @@
             ></ngx-gallery>
           </tab>
           <tab heading="Messages">
-            <p>Messages</p>
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
