--- a/DatingApp.SPA/ClientApp/src/app/messages/messages.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/messages/messages.component.html
@@ -13,11 +13,11 @@
     </div>
   </div>
 
-  <div class="row" *ngIf="messages.length == 0">
+  <div class="row" *ngIf="messages?.length == 0">
     <h3>No messages</h3>
   </div>
 
-  <div class="row" *ngIf="messages.length > 0">
+  <div class="row" *ngIf="messages?.length > 0">
     <table class="table table-hover" style="cursor: pointer">
       <tr>
         <th style="width: 40%">Message</th>
@@ -26,16 +26,16 @@
         <th style="width: 20%"></th>
       </tr>
       <tr *ngFor="let message of messages" [routerLink]="['/members', 
-        messageContainer == 'Outbox' ? message.recipientId : message.senderId]">
+        messageContainer == 'Outbox' ? message.recipientId : message.senderId]" [queryParams]="{tab: 3}">
         <td>{{message.content}}</td>
         <td>
           <div *ngIf="messageContainer != 'Outbox'">
                 <img src={{message?.senderPhotoUrl}} class="img-circle rounded-circle mr-1">
-                <strong>{{message.senderKnownAs}}</strong>
+                <strong>{{message.senderKnowAs}}</strong>
           </div>
           <div *ngIf="messageContainer == 'Outbox'">
                 <img src={{message?.recipientPhotoUrl}} class="img-circle rounded-circle mr-1">
-                <strong>{{message.recipientKnownAs}}</strong>
+                <strong>{{message.recipientKnowAs}}</strong>
           </div>
         </td>
         <td>{{message.messageSent | timeAgo}}</td>
@@ -51,8 +51,8 @@
 
 <div class="d-flex justify-content-center">
     <pagination [boundaryLinks]="true" 
-                [totalItems]="pagination.totalItems"
-                [itemsPerPage]="pagination.itemsPerPage"
+                [totalItems]="pagination?.totalItems"
+                [itemsPerPage]="pagination?.itemsPerPage"
                 [(ngModel)]="pagination.currentPage"
                 (pageChanged)="pageChanged($event)"
               previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
