--- a/DatingApp.SPA/ClientApp/src/app/admin/photo-management/photo-management.component.html
+++ b/DatingApp.SPA/ClientApp/src/app/admin/photo-management/photo-management.component.html
@@ -1,3 +1,11 @@
-<p>
-  photo-management works!
-</p>
+<div class="row">
+  <div class="col-sm-2" *ngFor="let photo of photos">
+    <h4>{{photo.userName}}</h4>
+    <img src="{{photo.url}}" class="img-thumbnail p-1" alt="photo.userName">
+
+    <div class="text-center">
+      <button type="button" class="btn btn-success btn-sm mr-1" (click)="approvePhoto(photo.id);">Approve</button>
+      <button type="button" class="btn btn-danger btn-sm" (click)="rejectPhoto(photo.id);">Reject</button>
+    </div>
+  </div>
+</div>
